<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.5"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            app:adUnitId="@string/ad_banner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="6dp"
                android:paddingEnd="16dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_clear_white"
                app:title="@string/recharge_naccount"
                app:titleTextColor="#ffffff" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:id="@+id/search_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <View
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />

                        <EditText
                            android:id="@+id/et_card_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:textColor="?attr/colorAccent"
                            android:background="@drawable/edittextbg"
                            android:hint="@string/card_number"
                            android:padding="10dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/giftswitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:thumb="@drawable/custom_thumb"
                            app:showText="true"
                            android:textOn="@string/thumb_gift"
                            android:textOff="@string/thumb_self"
                            app:track="@drawable/custom_track" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/giftarea"
                            android:visibility="visible"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/et_phone_number"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edittextbg"
                                android:hint="@string/phone_number"
                                android:inputType="phone"
                                android:padding="10dp"
                                android:textColor="?attr/colorAccent"
                                android:layout_marginEnd="8dp"
                                app:layout_constraintEnd_toStartOf="@+id/btn_pick"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageButton
                                android:id="@+id/btn_pick"
                                android:layout_width="40dp"
                                android:layout_height="0dp"
                                android:background="@drawable/btnbg"
                                android:padding="3dp"
                                android:layout_margin="3dp"
                                android:visibility="gone"
                                android:src="@drawable/ic_add_circle"
                                app:layout_constraintBottom_toBottomOf="@+id/et_phone_number"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/et_phone_number" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_read_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_camera"
                            android:background="@drawable/btnbg"
                            android:textColor="@color/white"
                            android:padding="8dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginStart="32dp"
                            android:text="@string/read_card" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_recharge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_up"
                            android:background="@drawable/btnbg"
                            android:textColor="@color/white"
                            android:padding="8dp"
                            android:text="@string/bb_recharge" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

