<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.5"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="MEDIUM_RECTANGLE"
            app:adUnitId="@string/ad_banner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="6dp"
                android:paddingEnd="16dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_clear_white"
                app:title="@string/transfer_nbalance"
                app:titleTextColor="#ffffff" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:id="@+id/search_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_trans_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/edittextbg"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColor="?attr/colorAccent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_pick"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/btn_pick"
                        android:layout_width="40dp"
                        android:layout_height="0dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/btnbg"
                        android:padding="3dp"
                        android:src="@drawable/ic_add_circle"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/et_trans_number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@+id/et_trans_number">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />

                        <EditText
                            android:id="@+id/et_amount"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/edittextbg"
                            android:hint="@string/amount"
                            android:inputType="number"
                            android:padding="10dp"
                            android:textColor="?attr/colorAccent"
                            app:layout_constraintEnd_toStartOf="@+id/btn_pick"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />

                        <Button
                            android:id="@+id/btn_transfer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btnbg"
                            android:drawableStart="@drawable/ic_up"
                            android:padding="8dp"
                            android:text="@string/bb_transfer"
                            android:textColor="@color/white" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


